--- a/public/css/style_search.css
+++ b/public/css/style_search.css
@@ -26,3 +26,10 @@ p.cntr i{
 table.equl td{
     width: 100px;
 }
+
+div.loader{
+    height: 280px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
